xfsprogs (1.3.15-1) unstable; urgency=low

  * Fix minor package version numbering issue (closes: #117545)
  * Fix bug in mkfs.xfs device size cross-check for realtime device
  * Reenable use of the BLKBSZSET ioctl in libxfs

 -- Nathan Scott <nathans@debian.org>  Wed, 12 Dec 2001 09:25:42 +1100

xfsprogs (1.3.13-0) unstable; urgency=low

  * New upstream release
  * Fixes an important mkfs.xfs bug for >1TB filesystems
  * xfs_repair will no longer blindly zero a dirty log

 -- Nathan Scott <nathans@debian.org>  Fri, 26 Oct 2001 10:42:26 +1000

xfsprogs (1.3.11-0) unstable; urgency=low

  * Upstream release fixing several issues on 64 bit platforms

 -- Nathan Scott <nathans@debian.org>  Wed, 17 Oct 2001 10:00:35 +1000

xfsprogs (1.3.10-0) unstable; urgency=low

  * New upstream release
  * Fix up some issues building the bootfloppies package

 -- Nathan Scott <nathans@debian.org>  Fri, 12 Oct 2001 17:43:20 +1000

xfsprogs (1.3.9-0) unstable; urgency=low

  * Upstream bug fix release
  * Additional and updated manual page entries

 -- Nathan Scott <nathans@debian.org>  Fri,  5 Oct 2001 14:39:47 +1000

xfsprogs (1.3.8-0) unstable; urgency=low

  * New upstream release
  * Fix inclusion of mkfs man page in boot floppies package (closes: #112634)

 -- Nathan Scott <nathans@debian.org>  Wed, 19 Sep 2001 14:49:30 +1000

xfsprogs (1.3.7-0) unstable; urgency=low

  * New upstream release
  * Change to libhandle licensing (was GPL, now LGPL-2.1)
  * Create a boot-floppies package with smaller mkfs.xfs (closes: #111426)
  * Make install-sh posix compliant so ash as /bin/sh works (closes: #111985)

 -- Nathan Scott <nathans@debian.org>  Mon, 10 Sep 2001 10:52:04 +1000

xfsprogs (1.3.5-0) unstable; urgency=low

  * Upstream bugfix release; fixes listed below
  * Fix bug in xfs_db bit handling on big endian platforms
  * Fix mkfs.xfs bug related to too-small final allocation group
  * Fix signedness bug in DMAPI ioctl structure definition
