@@ -40,7 +40,7 @@ HFILES = addr.h agf.h agfl.h agi.h attr.h attrshort.h bit.h block.h bmap.h \
 	dbread.h debug.h dir.h dir2.h dir2sf.h dirshort.h dquot.h echo.h \
 	faddr.h field.h flist.h fprint.h frag.h freesp.h hash.h help.h \
 	init.h inobt.h inode.h input.h io.h malloc.h mount.h output.h \
-	print.h quit.h sb.h uuid.h sig.h strvec.h type.h write.h
+	print.h quit.h sb.h sig.h strvec.h text.h type.h uuid.h write.h
 CFILES = $(HFILES:.h=.c) main.c
 LSRCFILES = xfs_admin.sh xfs_check.sh xfs_ncheck.sh
 LLDLIBS	= $(LIBXFS) $(LIBUUID)
