@@ -1,3 +1,9 @@
+xfsprogs-1.3.16 (17 December 2001)
+	- added text dump type to xfs_db (mkp)
+	- removed use of a temporary file in xfs_db when processing
+	  commands on the command line - allows xfs_check to be run
+	  on read-only root filesystems
+
 xfsprogs-1.3.15 (12 December 2001)
 	- reenable the use of the BLKBSZSET ioctl, its baaack
 	- sync recent XFS kernel source changes back into libxfs
